--- a/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
@@ -26,7 +26,11 @@
       display: inline-block;
       margin: 0 14px;
       a {
-        font-size: 240%;
+        font-size: 150%;
+        color: #424242;
+        i {
+          color: #424242;
+        }
       }
     }
   }
