--- a/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
@@ -1,4 +1,5 @@
 
+
 //General
 .site-footer {
   background-color: #f9f9f9 !important;
@@ -18,6 +19,7 @@
   }
   input[type=email] {
     width: 100%;
+    color: #4c4c4c;
   }
   .footer-social {
     text-align: center;
@@ -27,9 +29,9 @@
       margin: 0 14px;
       a {
         font-size: 150%;
-        color: #424242;
+        color: #4c4c4c;
         i {
-          color: #424242;
+          color: #4c4c4c;
         }
       }
     }
